--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,6 @@ Imports:
   dplyr,
   downloader
 Remotes:
-  url::http://dev.monetdb.org/Assets/R/MonetDBLite_0.1.0.zip,
-  url::http://dev.monetdb.org/Assets/R/MonetDB.R_1.0.1.zip
+  url::http://dev.monetdb.org/Assets/R/MonetDBLite_0.1.0.tar.gz,
+  url::http://dev.monetdb.org/Assets/R/MonetDB.R_1.0.1.tar.gz
 RoxygenNote: 5.0.1
